[gd_scene load_steps=5 format=3 uid="uid://buafe3kxce2c2"]

[ext_resource type="Script" uid="uid://cc0in88462unc" path="res://scripts/UI/multiplayer.gd" id="1_b0l6s"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_b0l6s"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_crvko"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_pjkx2"]

[node name="multiplayer" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_b0l6s")

[node name="MainScreen" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10

[node name="BackgroundTexture" type="NinePatchRect" parent="MainScreen"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MainScreen/BackgroundTexture"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 180

[node name="Leavebutton" type="Button" parent="MainScreen/BackgroundTexture/VBoxContainer"]
custom_minimum_size = Vector2(75, 75)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
text = "Leave"

[node name="seperator" type="Control" parent="MainScreen/BackgroundTexture/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MainScreen/BackgroundTexture/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 265

[node name="HostButton" type="Button" parent="MainScreen/BackgroundTexture/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(200, 200)
layout_mode = 2
theme_override_font_sizes/font_size = 37
text = "HOST"

[node name="seperator" type="Control" parent="MainScreen/BackgroundTexture/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="JoinFriendButton" type="Button" parent="MainScreen/BackgroundTexture/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(200, 200)
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "JOIN FRIEND"

[node name="SeperateButton" type="Button" parent="MainScreen/BackgroundTexture/VBoxContainer/HBoxContainer"]
visible = false
custom_minimum_size = Vector2(200, 200)
layout_mode = 2
theme_override_styles/hover = SubResource("StyleBoxEmpty_b0l6s")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_crvko")
theme_override_styles/normal = SubResource("StyleBoxEmpty_pjkx2")

[node name="UI" type="CanvasLayer" parent="."]

[node name="MarginContainer" type="MarginContainer" parent="UI"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="UI/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 445

[node name="seperator" type="Control" parent="UI/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="UI/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 1125

[node name="seperator" type="Control" parent="UI/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="JoinUI" type="PanelContainer" parent="UI/MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(300, 300)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="UI/MarginContainer/VBoxContainer/HBoxContainer/JoinUI"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="CancelButton" type="Button" parent="UI/MarginContainer/VBoxContainer/HBoxContainer/JoinUI/VBoxContainer"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
text = "X"

[node name="Result" type="Label" parent="UI/MarginContainer/VBoxContainer/HBoxContainer/JoinUI/VBoxContainer"]
visible = false
layout_mode = 2
theme_override_font_sizes/font_size = 20
horizontal_alignment = 1
vertical_alignment = 1

[node name="seperator2" type="Control" parent="UI/MarginContainer/VBoxContainer/HBoxContainer/JoinUI/VBoxContainer"]
layout_mode = 2

[node name="Topic" type="Label" parent="UI/MarginContainer/VBoxContainer/HBoxContainer/JoinUI/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Enter IP to Join Room"
horizontal_alignment = 1
vertical_alignment = 1

[node name="seperator" type="Control" parent="UI/MarginContainer/VBoxContainer/HBoxContainer/JoinUI/VBoxContainer"]
layout_mode = 2

[node name="IPInput" type="LineEdit" parent="UI/MarginContainer/VBoxContainer/HBoxContainer/JoinUI/VBoxContainer"]
custom_minimum_size = Vector2(250, 50)
layout_mode = 2
size_flags_horizontal = 4
placeholder_text = "127.0.0.1"
alignment = 1

[node name="SubmitButton" type="Button" parent="UI/MarginContainer/VBoxContainer/HBoxContainer/JoinUI/VBoxContainer"]
custom_minimum_size = Vector2(250, 50)
layout_mode = 2
size_flags_horizontal = 4
text = "Submit"

[connection signal="pressed" from="MainScreen/BackgroundTexture/VBoxContainer/Leavebutton" to="." method="_on_leavebutton_pressed"]
[connection signal="pressed" from="MainScreen/BackgroundTexture/VBoxContainer/HBoxContainer/HostButton" to="." method="_on_host_button_pressed"]
[connection signal="pressed" from="MainScreen/BackgroundTexture/VBoxContainer/HBoxContainer/JoinFriendButton" to="." method="_on_join_friend_button_pressed"]
[connection signal="pressed" from="UI/MarginContainer/VBoxContainer/HBoxContainer/JoinUI/VBoxContainer/CancelButton" to="." method="_on_cancel_button_pressed"]
[connection signal="text_submitted" from="UI/MarginContainer/VBoxContainer/HBoxContainer/JoinUI/VBoxContainer/IPInput" to="." method="_on_ip_input_text_submitted"]
[connection signal="pressed" from="UI/MarginContainer/VBoxContainer/HBoxContainer/JoinUI/VBoxContainer/SubmitButton" to="." method="_on_submit_button_pressed"]
